--- a/login.html
+++ b/login.html
@@ -14,6 +14,8 @@
     <a href="about.html">About page</a>
     <a href="contact.html">Contact page</a>
     <hr/>
+    <h1>Login</h1>
+    <br/>
     <form>
         <label for="email">Email</label>
         <input type="email" name="Email" placeholder="Write Your Email..." id="email"/>
