--- a/menu.html
+++ b/menu.html
@@ -14,6 +14,8 @@
     <a href="about.html">About page</a>
     <a href="contact.html">Contact page</a>
     <hr/>
+    <h1>Menu</h1>
+    <br/>
     <table border="1" width="500px">
         <caption>Craft Burger Menu</caption>
         <thead>
